Money bug on plugin init solved and the pet now comes back when he get off screen

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@
 	transform-origin: top;
 
 	image-rendering: pixelated;
+  border: 1px solid red;
 }
 
 .pet-level {
